Added domain to notification; simplified code and removed inefficiencies; removed potential xss and enforced a strict CSP

--- a/popup/settings.html
+++ b/popup/settings.html
@@ -5,10 +5,11 @@
     <title>Port Authority</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="core.css">
 </head>
 
 <body>
-    <p style="color: red;"><strong>Make sure you enter a proper domain name (ebay.com)</strong></p>
+    <p class="warning-text"><strong>Make sure you enter a proper domain name (ebay.com)</strong></p>
     <form>
         <label>Add new domain:</label>
         <input type="text" id="add_domain" >
